# SimpleNetwork

./: .gitignore  CMakeLists.txt
src/net/: buffer.cpp  buffer.h  client.cpp  client.h  connection.cpp  connection.h  connectionscontrol.h  network.cpp  network.h  packet.h  server.cpp  server.h
srcTest/: main.cpp
